--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "node deploy.js",
+    "deploy:netlify": "npm run build && netlify deploy --prod",
+    "deploy:firebase": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
